Throttle the IndexCleaner the same way we do with the IndexScheduler.

BUG: 276593